<resources>
    <string name="app_name">UserList</string>
    <string name="tv_fun_avatar">Fun Avatar</string>
    <string name="tv_register_your_avatar">Register your avatar</string>
    <string name="hint_biography">Biography</string>
    <string name="hint_name">Name</string>
    <string name="tv_save">Save</string>
    <string name="tap_to_set_avatar">Tap to set avatar</string>
    <string name="no_avatare_registered_message">No avatar registered :(</string>
    <string name="avatar_successfully_registered_message">Avatar successfully registered :)</string>
    <string name="avatar_successfully_removed_message">Avatar successfully removed :)</string>
    <string name="fill_fields_message">fill all information :)</string>
</resources>